--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,2 +1,23 @@
+<nav class="navbar navbar-expand-sm bg-primary navbar-dark">
+    <ul class="navbar-nav">
+        <li class="nav-item">
+          <a routerLink="employee"  routerLinkActive="active"  class="nav-link"> Employee list</a>
+        </li>
+
+    </ul>
+
+</nav>
+
+
+
 <h1 class="text-center">CRUD Operations</h1>
-<app-employee-list></app-employee-list>
+<div class="container">
+    <router-outlet></router-outlet>
+</div>
+
+<footer class="footer">
+    <div class="container">
+          <span>All rights are reserved!!!</span>
+    </div>
+</footer>
+
