--- a/src/styles.css
+++ b/src/styles.css
@@ -1,3 +1,14 @@
 
 
 /* @import "~../node_modules/bootstrap/dist/css/bootstrap.min.css" */               /* This is the alternate method to add bootstrap in the project */
+
+.footer{
+    position:absolute;
+    bottom:0;
+    width:100%;
+    height:70px;
+    background-color: blue;
+    text-align:center;
+    color: white;
+
+}
