--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -3,6 +3,9 @@
         <li class="nav-item">
           <a routerLink="employee"  routerLinkActive="active"  class="nav-link"> Employee list</a>
         </li>
+        <li class="nav-item">
+            <a routerLink="create"  routerLinkActive="active"  class="nav-link"> Add Employee </a>
+          </li>
 
     </ul>
 
