--- a/src/app/employee-list/employee-list.component.html
+++ b/src/app/employee-list/employee-list.component.html
@@ -6,6 +6,7 @@
                 <th> First name</th>
                 <th> Last name</th>
                 <th> Email id</th>
+                <th> Action</th>
             </tr>
         </thead>
         <tbody>
@@ -13,6 +14,9 @@
                 <td> {{employee.firstName}}</td>
                 <td> {{employee.lastName}}</td>
                 <td> {{employee.emailId}}</td>
+                <td>
+                    <button (click)="updateEmployee(employee.id)" class="btn btn-info"> Update</button>
+                </td>
 
 
                 
